# pypuff

./: AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  io_compatibility.md  migration_notes.md  numerical_model.md  parallel_mpi.md  particle_model.md  production_readiness.md  pyterrel.md  pywrf_pymet.md  usecases.md  validation.md  visualization.md
examples/: README.md  landuse.asc  minimal.inp  minimal.json  terrain.asc
scripts/: check_release.py
src/pypuff/: __init__.py  cli.py  doctor.py  exceptions.py  workflow.py
src/pypuff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pypuff/core/: grid.py  physics.py
src/pypuff/io/: jsonio.py  legacy_outputs.py  netcdf_cf.py
src/pypuff/models/: __init__.py  calmet.py  calpost.py  calpuff.py  calwrf.py  ctgproc.py  particles.py  pymet.py  pyterrel.py  pywrf.py  visualization.py
src/pypuff/parallel/: __init__.py  mpi.py
src/pypuff/usecases/: __init__.py  high_resolution_wind.py  model_evaluation.py  wildfire.py
tests/: test_pyterrel.py  test_usecases.py
usecases/: README.md  wildfire.py
usecases/01_high_resolution_wind_field/: README.md  run.py
usecases/02_wildfire_arson_effects/: README.md  run.py
usecases/03_satellite_ai_evaluation/: README.md  run.py
